--- a/rootdir/etc/init.kirin970.rc
+++ b/rootdir/etc/init.kirin970.rc
@@ -20,8 +20,8 @@ on fs
 on post-fs-data
     start teecd
 
-on property:ro.lineage.device=*
-    setprop qemu.hw.mainkeys 1
+#on property:ro.aicp.device=*
+#    setprop qemu.hw.mainkeys 1
 
 on property:sys.user.0.ce_available=true
     mkdir /data/sec_storage_data 0700 system system
